Make only music footer clickable, fix spacing

--- a/imessage-exporter/src/exporters/resources/style.css
+++ b/imessage-exporter/src/exporters/resources/style.css
@@ -120,6 +120,8 @@ xmp {
 	max-width: 90%;
 	margin-left: auto;
 	margin-right: auto;
+	display: block;
+	padding-bottom: 2%;
 }
 
 
